# layerpack

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/lambda_bundler/: __init__.py  cli.py  dependency_manager.py  exceptions.py  layer_builder.py  logger.py  packager.py
src/layerpack/: cli.py  dependency_manager.py  exceptions.py  layer_builder.py  logger.py  packager.py
tests/: test_cli.py  test_dependency_manager.py  test_layer_builder.py  test_packager.py
