[tool.poetry]
name = "lambda-bundler"
version = "0.1.0"
description = "A Python library for simplifying AWS Lambda deployment"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "lambda_bundler", from = "src"}]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
click = "^8.0.0"
poetry = "^1.7.0"
poetry-core = "^1.9.0"
setuptools = "^69.0.0"
packaging = "^23.2"
uv = "^0.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.2"

[tool.poetry.scripts]
lambda-bundler = "lambda_bundler.cli:cli"

[tool.ruff]
target-version = "py38"
line-length = 88
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
lint.ignore = ["D203", "D213"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=lambda_bundler --cov-report=term-missing"